--- a/Gianteagle.Api/appsettings.json
+++ b/Gianteagle.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectionString": "Data Source=.;Initial Catalog=GiantEagle;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "DatFilePath": "F:\\Interviews\\gianteagle\\Gianteagle.Api\\DataFiles\\3305.dat",
   "AllowedHosts": "*"
 }
